Rebranched to pick up master changes and new java-http versions